<resources>
    <string name="app_name">Sports Club</string>
    <string name="menu">Menú</string>
    <string name="registrar_socio">Registrar socio</string>
    <string name="registrar_no_socio">Registrar No Socio</string>
    <string name="bienvenido_admin">¡BIENVENIDO, ADMIN!</string>
    <string name="alt_logo">Logo de Ráfaga Deportiva</string>
    <string name="email_inicio">E-MAIL</string>
    <string name="hint_correo">Ingrese su correo...</string>
    <string name="password_inicio">CONTRASEÑA</string>
    <string name="hint_password">Ingrese su contraseña...</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="otras_operaciones_burger">OTRAS OPERACIONES</string>
    <string name="lista_de_pagos_burger">LISTA DE PAGOS</string>
    <string name="listar_vencimientos_burger">LISTAR VENCIMIENTOS DEL DÍA</string>
    <string name="imprimir_carnet_socio_burger">IMPRIMIR CARNET SOCIO</string>
    <string name="asignar_actividad_deportivo_burger">ASIGNAR ACTIVIDAD DEL CLUB DEPORTIVO</string>
    <string name="registrar_socio_mayusculas">REGISTRAR SOCIO</string>
    <string name="registrar_no_socio_mayusculas">REGISTRAR NO SOCIO</string>
    <string name="secondary_socio">REGISTRAR SOCIO</string>
    <string name="secondary_no_socio">REGISTRAR NO SOCIO</string>
    <string name="nombre_form">Nombre...</string>
    <string name="apellido_form">Apellido...</string>
    <string name="celular_form">Teléfono...</string>
    <string name="domicilio_form">Domicilio...</string>
    <string name="tipo_doc_form">Tipo Doc...</string>
    <string name="dni_form">Num Doc...</string>
    <string name="plan_form">Seleccionar plan...</string>
    <string name="foto_carnet_form">Foto carnet...</string>
    <string name="apto_fisico_form">Apto Físico</string>
    <string name="registrado">REGISTRADO</string>
    <string name="correctamente">CORRECTAMENTE</string>
    <string name="inicio">Inicio</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="socio">SOCIO</string>
    <string name="no_socio">NO SOCIO</string>
    <string name="pago">PAGO</string>
    <string name="imprimir">IMPRIMIR</string>
    <string name="carnet">CARNET DE SOCIO</string>
    <string name="vencimientos">VENCIMIENTOS</string>
    <string name="imprimirpdf">IMPRIMIR PDF</string>
    <string name="payment_list">LISTA DE PAGOS</string>
    <string name="insert_document">Ingrese documento...</string>
    <string name="datos_pago">Datos del pago</string>
    <string name="pago_button">Pagar</string>
    <string name="cuotas_form">Cantidad de Cuotas</string>
    <string name="monto_form">MONTO A PAGAR</string>
    <string name="siguiente_button">SIGUIENTE</string>
    <string name="actividades">ACTIVIDADES</string>
</resources>