<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RegSocio"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/alt_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/club_deportivo8_1_removebg_preview" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_secondary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <!-- Flecha Back a la izquierda -->
            <ImageView
                android:id="@+id/backMenu"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|start"
                android:contentDescription="@string/menu"
                android:padding="4dp"
                android:src="@drawable/arrow_back"
                android:clickable="true"
                android:focusable="true" />

            <!-- Título centrado -->
            <TextView
                android:id="@+id/bienvenidaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/secondary_socio"
                android:textColor="@color/textSecondary"
                android:textSize="22sp"
                android:textStyle="italic" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/nombre_form"
            app:layout_constraintBottom_toTopOf="@+id/celular_socio"
            app:layout_constraintEnd_toStartOf="@+id/apellido_socio"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:inputType="text"
                android:minHeight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellido_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/apellido_form"
            app:layout_constraintBottom_toTopOf="@+id/celular_socio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:minHeight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:inputType="text"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/celular_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/celular_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:inputType="phone"
                android:minHeight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/domicilio_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/domicilio_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/celular_socio">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:minHeight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textStyle="italic" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipoDoc_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/numDoc_socio"
            app:layout_constraintHorizontal_bias="0.145"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/domicilio_socio">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompleteDoc"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="50dp"
                android:hint="@string/tipo_doc_form"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:textStyle="italic"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numDoc_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/dni_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/domicilio_socio">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:minHeight="50dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textStyle="italic"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/plan_socio"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipoDoc_socio">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/autoCompletePlan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:minHeight="50dp"
                android:hint="@string/plan_form"
                android:background="@drawable/background_form"
                android:fontFamily="@font/roboto"
                android:textStyle="italic"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_carnet_socio"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/foto_carnet_form"
            android:background="@drawable/background_carnet"
            android:textColor="@color/textHint"
            app:layout_constraintTop_toBottomOf="@+id/plan_socio"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintEnd_toEndOf="parent"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/apto_fisico_form"
            android:textColor="@color/text"
            android:textStyle="bold"
            android:buttonTint="@color/text"
            app:layout_constraintEnd_toStartOf="@+id/btn_carnet_socio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan_socio" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regSocioButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_buttons"
            android:text="@string/registrar_socio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plan_socio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
