<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ActividadesListaActivity"
        android:background="@drawable/gradient_background">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/alt_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/club_deportivo8_1_removebg_preview" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_secondary"

            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/backMenu"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/menu"
                    app:srcCompat="@drawable/arrow_back" />
                <TextView
                    android:id="@+id/actividadesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/actividades"
                    android:textColor="@color/textSecondary"
                    android:textSize="22sp"
                    android:textStyle="italic"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/searchbar"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:layout_margin="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <EditText
                android:id="@+id/search_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="Buscar actividad..."
                android:paddingHorizontal="32dp"
                android:paddingVertical="8dp"
                android:background="@android:color/transparent"
                android:textColor="@color/textSecondary"
                android:textColorHint="@color/textSecondary"
                android:textSize="16sp"
                android:inputType="text"
                />

            <ImageView
                app:tint="@color/textSecondary"
                android:id="@+id/search_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@android:drawable/ic_menu_search"
                android:contentDescription="Buscar"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:dividerHeight="2dp"
            android:groupIndicator="@null"
            android:padding="10dp"
            android:background="#204642"
            android:layout_marginTop="10dp"
            android:choiceMode="multipleChoice"
            app:layout_constraintTop_toBottomOf="@+id/search_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/siguienteButton"
            style="@style/Base.Theme.SportsClub"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_buttons"
            android:text="@string/siguiente_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expandableListView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>